db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-flights-db
spec:
  selector:
    app: open-flights-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
