web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-flights-web
spec:
  selector:
    app: open-flights-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort  # Change to ClusterIP or LoadBalancer as per your requirement
