Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-flights-ingress
spec:
  rules:
  - host: open-flights.example.com  # Replace with your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: open-flights-web
            port:
              number: 80
